--- a/index.html
+++ b/index.html
@@ -2,150 +2,47 @@
 <html>
 <head>
   <title>Pani Puri Delight from Santosh Bhel Center</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f9f9f9;
-    }
-    .email-container {
-      width: 100%;
-      max-width: 600px;
-      margin: auto;
-      background-color: #ffffff;
-      border: 1px solid #e0e0e0;
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .header {
-      background-color: #ff6f61;
-      color: #ffffff;
-      padding: 20px;
-      text-align: center;
-    }
-    .header h1 {
-      margin: 0;
-      font-size: 24px;
-    }
-    .content {
-      padding: 20px;
-      text-align: center;
-    }
-    .content h2 {
-      color: #333333;
-      font-size: 20px;
-    }
-    .content p {
-      color: #666666;
-      font-size: 16px;
-      line-height: 1.5;
-    }
-    .content img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      margin: 10px 0;
-    }
-    .benefits {
-      text-align: left;
-      margin: 20px 0;
-    }
-    .benefit-item {
-      background-color: #ffefed;
-      border-radius: 8px;
-      padding: 15px;
-      margin-bottom: 10px;
-      width: 100%;
-      box-sizing: border-box;
-    }
-    .benefit-item h3 {
-      color: #ff6f61;
-      font-size: 18px;
-      margin: 0 0 5px 0;
-    }
-    .benefit-item p {
-      color: #666666;
-      font-size: 16px;
-      margin: 0;
-    }
-    .testimonial {
-      background-color: #f4f4f4;
-      padding: 15px;
-      margin: 20px 0;
-      border-radius: 8px;
-      text-align: left;
-    }
-    .testimonial p {
-      font-style: italic;
-      color: #555555;
-    }
-    .testimonial .customer {
-      font-weight: bold;
-      color: #333333;
-    }
-    .cta-button {
-      background-color: #ff6f61;
-      color: #ffffff;
-      padding: 10px 20px;
-      text-decoration: none;
-      display: inline-block;
-      border-radius: 5px;
-      margin-top: 20px;
-    }
-    .footer {
-      background-color: #f9f9f9;
-      color: #888888;
-      padding: 20px;
-      text-align: center;
-      font-size: 14px;
-    }
-    .footer a {
-      color: #ff6f61;
-      text-decoration: none;
-    }
-  </style>
+  
 </head>
-<body>
-  <div class="email-container">
-    <div class="header">
-      <h1>Discover the Magic of Pani Puri at Santosh Bhel Center</h1>
+<body style="font-family: 'Arial', sans-serif;margin: 0;padding: 0;background-color: #f9f9f9;">
+  <div class="email-container" style="width: 100%;max-width: 600px;margin: auto;background-color: #ffffff;border: 1px solid #e0e0e0;border-radius: 8px;overflow: hidden;box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+    <div class="header" style="background-color: #ff6f61;color: #ffffff;padding: 20px;text-align: center;">
+      <h1 style="margin: 0;font-size: 24px;">Discover the Magic of Pani Puri at Santosh Bhel Center</h1>
     </div>
-    <div class="content">
-      <h2>A Taste of Tradition</h2>
-      <p>Experience the authentic flavors of Pani Puri made with the finest ingredients at Santosh Bhel Center. Each bite is an adventure of taste that you won't forget!</p>
-      <img src="https://media.istockphoto.com/id/1161782883/photo/famous-indian-asian-street-food-dish-i-e-panipuri-snack-in-a-clay-bowl-along-with-its.jpg?s=1024x1024&w=is&k=20&c=ySvnAR2up0unS0NtAnLaoDobCZzNARKVYmX8hTc4j6A=" alt="Delicious Pani Puri">
-      <div class="benefits">
-        <div class="benefit-item">
-          <h3 style="text-align:center">Fresh Ingredients</h3>
-          <p>We use only the freshest ingredients to ensure the best taste and quality in every serving.</p>
+    <div class="content" style="padding: 20px;text-align: center;">
+      <h2 style="color: #333333;font-size: 20px;">A Taste of Tradition</h2>
+      <p style="color: #666666;font-size: 16px;line-height: 1.5;">Experience the authentic flavors of Pani Puri made with the finest ingredients at Santosh Bhel Center. Each bite is an adventure of taste that you won't forget!</p>
+      <img src="https://media.istockphoto.com/id/1161782883/photo/famous-indian-asian-street-food-dish-i-e-panipuri-snack-in-a-clay-bowl-along-with-its.jpg?s=1024x1024&w=is&k=20&c=ySvnAR2up0unS0NtAnLaoDobCZzNARKVYmX8hTc4j6A=" alt="Delicious Pani Puri" style="width: 100%;height: auto;border-radius: 8px;margin: 10px 0;">
+      <div class="benefits" style="text-align: left;margin: 20px 0;">
+        <div class="benefit-item" style="background-color: #ffefed;border-radius: 8px;padding: 15px;margin-bottom: 10px;width: 100%;box-sizing: border-box;">
+          <h3 style="text-align: center;color: #ff6f61;font-size: 18px;margin: 0 0 5px 0;">Fresh Ingredients</h3>
+          <p style="color: #666666;font-size: 16px;line-height: 1.5;margin: 0;">We use only the freshest ingredients to ensure the best taste and quality in every serving.</p>
         </div>
-        <div class="benefit-item">
-          <h3 style="text-align:center">Authentic Recipe</h3>
-          <p>Our Pani Puri is prepared using a traditional recipe passed down through generations.</p>
+        <div class="benefit-item" style="background-color: #ffefed;border-radius: 8px;padding: 15px;margin-bottom: 10px;width: 100%;box-sizing: border-box;">
+          <h3 style="text-align: center;color: #ff6f61;font-size: 18px;margin: 0 0 5px 0;">Authentic Recipe</h3>
+          <p style="color: #666666;font-size: 16px;line-height: 1.5;margin: 0;">Our Pani Puri is prepared using a traditional recipe passed down through generations.</p>
         </div>
-        <div class="benefit-item">
-          <h3 style="text-align:center">Crispy Puris</h3>
-          <p>Enjoy the perfect crunch with our freshly made puris that complement the flavorful water.</p>
+        <div class="benefit-item" style="background-color: #ffefed;border-radius: 8px;padding: 15px;margin-bottom: 10px;width: 100%;box-sizing: border-box;">
+          <h3 style="text-align: center;color: #ff6f61;font-size: 18px;margin: 0 0 5px 0;">Crispy Puris</h3>
+          <p style="color: #666666;font-size: 16px;line-height: 1.5;margin: 0;">Enjoy the perfect crunch with our freshly made puris that complement the flavorful water.</p>
         </div>
-        <div class="benefit-item">
-          <h3 style="text-align:center">Flavor Explosion</h3>
-          <p>Each Pani Puri offers a perfect balance of spicy, tangy, and sweet flavors that will delight your taste buds.</p>
+        <div class="benefit-item" style="background-color: #ffefed;border-radius: 8px;padding: 15px;margin-bottom: 10px;width: 100%;box-sizing: border-box;">
+          <h3 style="text-align: center;color: #ff6f61;font-size: 18px;margin: 0 0 5px 0;">Flavor Explosion</h3>
+          <p style="color: #666666;font-size: 16px;line-height: 1.5;margin: 0;">Each Pani Puri offers a perfect balance of spicy, tangy, and sweet flavors that will delight your taste buds.</p>
         </div>
       </div>
-      <div class="testimonial">
-        <p>"The best Pani Puri I've ever had! The flavors are perfectly balanced and the puris are always fresh and crispy. Highly recommend!"</p>
-        <p class="customer">- Priya S., Satisfied Customer</p>
+      <div class="testimonial" style="background-color: #f4f4f4;padding: 15px;margin: 20px 0;border-radius: 8px;text-align: left;">
+        <p style="color: #555555;font-size: 16px;line-height: 1.5;font-style: italic;">"The best Pani Puri I've ever had! The flavors are perfectly balanced and the puris are always fresh and crispy. Highly recommend!"</p>
+        <p class="customer" style="color: #333333;font-size: 16px;line-height: 1.5;font-style: italic;font-weight: bold;">- Priya S., Satisfied Customer</p>
       </div>
-      <h2>Don't Just Take Our Word for It</h2>
-      <p>Join the countless happy customers who keep coming back for more. Whether you're craving a quick snack or planning a party, Santosh Bhel Center's Pani Puri is the perfect choice.</p>
-      <a href="#" class="cta-button">Order Now</a>
+      <h2 style="color: #333333;font-size: 20px;">Don't Just Take Our Word for It</h2>
+      <p style="color: #666666;font-size: 16px;line-height: 1.5;">Join the countless happy customers who keep coming back for more. Whether you're craving a quick snack or planning a party, Santosh Bhel Center's Pani Puri is the perfect choice.</p>
+      <a href="#" class="cta-button" style="background-color: #ff6f61;color: #ffffff;padding: 10px 20px;text-decoration: none;display: inline-block;border-radius: 5px;margin-top: 20px;">Order Now</a>
     </div>
-    <div class="footer">
-      <p>Follow us on <a href="#">Facebook</a> | <a href="#">Instagram</a></p>
+    <div class="footer" style="background-color: #f9f9f9;color: #888888;padding: 20px;text-align: center;font-size: 14px;">
+      <p>Follow us on <a href="#" style="color: #ff6f61;text-decoration: none;">Facebook</a> | <a href="#" style="color: #ff6f61;text-decoration: none;">Instagram</a></p>
       <p>&copy; 2024 Santosh Bhel Center. All rights reserved.</p>
-      <p><a href="#">Unsubscribe</a></p>
+      <p><a href="#" style="color: #ff6f61;text-decoration: none;">Unsubscribe</a></p>
     </div>
   </div>
 </body>
